# thesis-manifold

./: .gitignore  2026-03 - CMT - Master Thesis - Literature review - Main Articles (40).csv  2026-04-13_18-59- FileFoldeTree-CMT_Codebase.txt  AGENTS.md  CHEATSHEET.md  CLAUDE (1).md  CLAUDE.md  DATASETS_FINAL_SUMMARY.md  DATASETS_SETUP_SUMMARY.md  DATA_CACHE_IMPLEMENTATION.md  INDEX.md  INTEGRATION_AUDIT_AND_HANDOVER.md  MESSAGE_TO_BRIAN.md  METADATA.py  PATHS.py  README.md  README_builder.md  SKILL_CREATION_SUMMARY.md  TESTING_AGENTS.md  TEST_GROUP_SCRIPT_README.md  VERIFICATION_REPORT.md  ZOTERO_QUICK_REFERENCE.md  config.py  paths.py  pyproject.toml  requirements.txt  skills-lock.json  test_db_connection.py  test_group.py
.claude/: DEPENDENCY_DIAGRAM.txt  DOCS_CLEANUP_ANALYSIS.md  IMPORTED_SKILLS_ANALYSIS.md  SEABORN_AUDIT_TRAIL_IMPLEMENTATION.md  SESSION_2026-04-15_ZOTERO_SUMMARY.md  SKILLS_DEMO_EXAMPLES.md  SKILLS_IMPORT_COMPLETION_SUMMARY.md  SKILLS_INVENTORY.md  SKILLS_ORGANIZATION.md  SKILL_GROUPS.md  ZOTERO_INTEGRATION_RECOMMENDATION.md  settings.json  settings.local.json
.codex/: config.toml  hooks.json
02_thesis_data/: METADATA.py
04_thesis_results/: generate_figures.py
05_thesis_writing/: outline.md  walkthrough-ch1-3-2026-06-30.md
ai_research_framework/: config.py  requirements.txt
datasets/: explore_nielsen.py  nielsen_connector.py  nielsen_data_assessment.py  preprocessing.py
dev/: repository_map.md
docs/: 2026-04-27_1630_MANIFOLD_ARCHITECTURE_AND_FEATURE_HANDLING.md  ACTION_ITEMS_2026-04-18.md  DATA_ACCESS_SETUP.md  GOOGLE_DRIVE_SETUP.md  (+15 more)
(+1189 files in other folders)
