[project]
name = "cmt-thesis"
version = "0.1.0"
description = "CBS Master Thesis: Manifold AI Research Framework + Production System"
requires-python = ">=3.11"

dependencies = [
    "pyzotero>=1.5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "aeon>=1.4.0",
    "pymc>=5.28.4",
    "polars>=1.39.3",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "statsmodels>=0.14.6",
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "shap>=0.49.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
    "prophet>=1.3.0",
    "pyarrow>=23.0.1",
    "pyodbc>=5.3.0",
    "azure-identity>=1.25.3",
    "tensorflow>=2.21.0",
    "anthropic>=0.96.0",
    "langchain-anthropic>=1.4.1",
]
